@@ -364,7 +364,8 @@ class ConfigParametersForApp ( ConfigParameters ) :
         #self.path_fm_selected   = self.declareParameter( name='PATH_FM_SELECTED',  val_def='./work/*.txt',       type='str' )
 
         # CommandLineCalib.py
-        self.xtc_dir_non_std    = self.declareParameter( name='XTC_DIR_NON_STD',    val_def='',             type='str' ) # './my/xtc'
+        self.xtc_dir_non_std    = self.declareParameter( name='XTC_DIR_NON_STD',   val_def='',       type='str' ) # './my/xtc'
+        self.job_timeout_sec    = self.declareParameter( name='JOB_TIMEOUT_SEC',   val_def=2000,     type='int' )
 
 #-----------------------------
     
